--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ function resetQuestion() {
 
 $( document ).ready(function() {
     var hard_mode = false;
-    var pinyin = true;
+    var pinyin_mode = true;
     var options_html = "<input id='hardmode' type='button' value='Hard mode' hardmode=false/><input id='nopinyinmode' type='button' value='Pinyin' pinyin=true/><ul>";
     const iterator = term_list.keys();
     for (const key of Object.keys(term_list))  {
