--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function resetQuestion() {
         hard_mode = false;
     }
     
-    var pinyin_mode = $("#nopinyinmode").attr("pinyinmode");
+    var pinyin_mode = $("#nopinyinmode").attr("pinyin");
     
     var question = getQuestion();
     $("#q").text(question[0].english);
