--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ $( document ).ready(function() {
     
     $("#nopinyinmode").click(function() {
         pinyin_mode = !pinyin_mode;
-        $(this).attr("pinyin", hard_mode);
+        $(this).attr("pinyin", pinyin_mode);
         resetQuestion();
     });
 
