--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 .nopinyin {
     display: none;   
 }
-.correct.pinyin {
+.correct.nopinyin, .incorrect.nopinyin {
     display: inline-block;    
 }
 #nopinyinmode[pinyin=true] {
